too lazy, cba to write msgs

--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -218,3 +218,7 @@ html.dark .DocSearch {
 .theme-default-content li {
   font-weight: 600
 }
+
+.theme-default-content strong {
+  font-weight: 1000
+}
